<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Activity titles -->
    <string name="app_name">微站</string>
    <string name="ac_name_image_list">Image List Example</string>
    <string name="ac_name_image_grid">Image Grid Example</string>
    <string name="ac_name_image_pager">Image Pager Example</string>
    <string name="ac_name_image_gallery">Image Gallery Example</string>
    <string name="ac_name_image_search">search and choose WeiZhan</string>
    
    <string name="ac_name_weizhan">微站名</string>
    <string name="ac_bt_notify">关注微站</string>
    <string name="ac_edit_search">大家都在热搜 “iphone6”</string>
    <!-- Labels -->
    <string name="label_activity_examples">Activity Examples</string>
    <string name="menu_item_clear_memory_cache">Clear memory cache</string>
    <string name="menu_item_clear_disc_cache">Clear disc cache</string>
    <string name="menu_item_pause_on_scroll">Pause on scroll</string>
    <string name="menu_item_pause_on_fling">Pause on fling</string>
    <string name="button_image_list">ListView</string>
    <string name="button_image_grid">GridView</string>
    <string name="button_image_pager">ViewPager</string>
    <string name="button_image_gallery">Gallery</string>
    
     <string name="hello">This area is used for putting tags。</string>
    <!-- Content descriptions -->
    <string name="descr_image">Image</string>
   
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载…</string>
    <string name="xlistview_header_last_time">上次刷新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    <string name="bt_share">分享</string>
    <string name="bt_collect">收藏</string>
    <string name="search_back">返回</string>
    <string name="bt_blow">吹上去</string>
    <string name="search_edit">请输入微站名称</string>
    <string name="search_title">选择微站</string>
    

</resources>