<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list_view_title"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#f5f5f5"
    android:orientation="vertical">
	<RelativeLayout     
	    android:id="@+id/list_title"
	    android:layout_width="fill_parent"     
	    android:layout_height="52dp"
	    android:background="@drawable/bg_title">  
	
	           <ImageView
	            android:id="@+id/list_icon"
	            android:layout_width="24dp"
	            android:layout_height="24dp"
	            android:background="#00000000"   
	            android:layout_centerVertical="true"
	            android:src="@drawable/btn_my"
	            android:contentDescription="@string/descr_image"
	            android:layout_alignParentLeft="true" 
	            android:layout_marginLeft="20dp"/>
	
	    <Button
	        android:id="@+id/list_bt_notify"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:tint="#ffffffff"
	        android:background="#00000000"  
	        android:layout_centerInParent="true"
	        android:layout_alignParentRight="true"
	        android:text="@string/ac_bt_notify"
        	android:textSize="14sp"
        	android:textColor="#81d647"
	        android:layout_marginRight="10dp"/>

	    <TextView
	        android:id="@+id/list_text_title_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingRight="5dp"
	        android:layout_centerHorizontal="true"
	        android:layout_centerVertical="true"
	        android:text="@string/ac_name_weizhan"
            android:textSize="16sp"
            android:textColor="#4e5c45" />
	    
	     <Button
	        android:id="@+id/list_bt_name"
	        android:layout_width="16dp"
	        android:layout_height="12dp"
	        android:layout_centerVertical="true"
	        android:background="@drawable/btn_downarrow" 
			android:layout_toRightOf="@id/list_text_title_name"/>

	</RelativeLayout>

 </LinearLayout>